Fixed grammar errors

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
     <!-- Introduction section -->
       <section class="intro page-text">
         <h3 class="intro-head">Introduction</h3>
-        <p class="intro-body">Hello, my name is Bryan. I am a programmer that does all types of different programming.
-            Most of my projects are video games. Visit each particular page to see what I've done
-            in that particular framework. </p>
+        <p class="intro-body">Hello, my name is Bryan. Welcome to my page! I am a programmer who does many
+        different types of programming. Visit each page to see what I've accomplished in each given framework.
+        Also, don't be alarmed, I did say I'm a programmer, but I also do a tiny bit of art; mainly with Adobe
+        Illustrator.</p>
           <p class=intro-body>Thank you, again, for visiting! My resumé is linked on the contact page as well as in the footer.
       </section>
     </div>
