--- a/pages/cpp_projects.html
+++ b/pages/cpp_projects.html
@@ -51,13 +51,21 @@
           I'm very proud of this particular project because it started out
           much simpler than it turned out to be. It was one of my first
           assessments in the Academy of Interactive Entertainment. It's
-          done is pure C++ and no helper libraries. I had to create a double buffer system from scratch due to some jitter issues with the first prototype. The game was started and completed in about 6 days. The following is a link to its GitHub repository: <a href="https://github.com/bhh32/IntroToCpp/tree/master/SpaceRouge">Space Rogue Vers. 1</a>
+          done in pure C++ and with no helper libraries. I had to create a double buffer system
+          from scratch due to some jitter issues with the first prototype. I
+          started and completed this game in approximately 6 days. The following is a link to its
+          GitHub repository:
+          <a href="https://github.com/bhh32/IntroToCpp/tree/master/SpaceRouge">Space Rogue Vers. 1</a>
         </p>
         <video class="proj-vid space-rouge2" controls>
           <source src="../videos/Space_Rogue2.mp4" type="video/mp4">
         </video>
         <p class="proj-vid-desc space-rouge2-desc">
-          This is a upgraded version of the above Space Rouge game. It used a very rudimentary graphics and sound libary. All game logic, player controllers, collision, AI, etc. is programmed in pure C++. This project took about 3 days to complete. Here is the link to its GitHub repository: <a href="https://github.com/bhh32/OOP/tree/master/Assessment3">Space Rouge Vers. 2</a>
+          This is an upgraded version of the above Space Rouge game. It used a
+          very rudimentary graphics and sound libary. All game logic, player
+          controllers, collision, AI, etc. is programmed in pure C++. This project
+          took about 3 days to complete. Here is the link to its GitHub repository:
+          <a href="https://github.com/bhh32/OOP/tree/master/Assessment3">Space Rouge Vers. 2</a>
         </p>
       </div>
     </section>
