--- a/pages/unreal_projects.html
+++ b/pages/unreal_projects.html
@@ -46,15 +46,27 @@
       <div class="page-text-body">
         <img class="assignment-mash-img unreal-imgs" src="../images/assignment_mash.png" alt="assignment-mash">
         <p class="unreal-desc assignment-mash-desc">
-          This assignment was one I did over a course of a quarter while attending Southern New Hampshire University - Online. It's done all in Unreal's C++ API, and was a very fun project. I call it "Assignment Mash-Up" because it was a bunch of assignements all mashed into one game project.
+          This assignment was one I did over a course of a quarter while attending
+           Southern New Hampshire University - Online.
+          It's done all in Unreal's C++ API, and was a very fun project. I call
+          it "Assignment Mash-Up" because it was a bunch of assignments all mashed
+          into one game project.
         </p>
         <img class="unreal-imgs clean-room-img" src="../images/clean_room_unreal.png" alt="clean-room-unreal">
         <p class="unreal-desc clean-room-unreal-desc">
-          "Clean Your Room" started off as a school assignment, but I enjoyed the concept so much that I continued development. It's still under development to this day, but it has been converted to a Unity3D project.
+          "Clean Your Room" started off as a school assignment, but I enjoyed
+          the concept so much that I continued development. It's still under
+          development to this day, but it has been converted to a Unity3D project.
         </p>
         <img class="unreal-imgs ravvit-img" src="../images/ravvit_walking.png" alt="ravvit-img">
         <p class="unreal-desc ravvit-desc">
-          Ravvit was an idea I had while watching a co-worker draw Odie from "Garfield and Friends" on a white board. It looked nothing like Odie at first, but instead looked like the little guy in the picture. Ravvit is a 2D character drawn in Adobe Illustrator and exported as a 2D sprite sheet into Spriter to do the 2D animation. From there I used Unreal to program the movement and used Unreal's Flipbook for the animation blending.
+          Ravvit was an idea I had while watching a co-worker draw Odie from
+          "Garfield and Friends" on a white board. It looked nothing like Odie
+          at first, but instead looked like the little guy in the picture.
+          Ravvit is a 2D character drawn in Adobe Illustrator and exported as a
+          2D sprite sheet into Spriter to do the 2D animation. From there I used
+          Unreal to program the movement and used Unreal's Flipbook for the
+          animation blending.
         </p>
       </div>
     </section>
