Added project to unity page

--- a/pages/unity_projects.html
+++ b/pages/unity_projects.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8" />
   <meta name="description" content="Bryan's Contact Info" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Bryan Hyland" />
   <meta name="keywords" content="Unity3D, games, video games, unity games" />
-  <title>Bryan's Portfolio - Unit3D</title>
+  <title>Bryan's Portfolio - Unity3D</title>
 
   <link rel="stylesheet" type="text/css" href="../css/newlayout.css" />
   <link rel="stylesheet" type="text/css" href="../css/newstandardstyle.css" />
@@ -76,6 +75,26 @@
           exploding pickup. However, if an achievement is earned it isn't taken away just because an exploding pickup was hit.<br />
           <a href="https://drive.google.com/file/d/1PUeXNMUjiEhHuLLDlYOy6GwsQxQJJ0SZ/view?usp=sharing">Clean Your Room - Windows</a><br />
         </p>
+        <video class="proj-vid indy-sec-vid" controls>
+          <source src="../videos/indy-video.mp4" type="videp/mp4">
+        </video>
+        <p class="proj-vid-desc indy-sec-desc">
+          This is a recreation of a level from one of my favorite games of all times, Indiana Jones and the Fate of Atlantis.
+          I got lucky and was able to recreate this part of the game as my Minor Project at the Academy of Interactive Entertainment.
+          One of my additions was to be able to have point and click controls like the original game, or you can choose to use the keyboard
+          for movement. This is done using a singleton pattern for a toggle that is clicked in the main menu. I created about 90% of the code
+          for this game, and helped with the other 10%. I also directed the artists that created all of the amazing art and level.
+          Follow the link to play the game <a href="https://drive.google.com/file/d/1xIiwSermtKz-RtkDzpY5cubKMelAP3Wh/view?usp=sharing">Indiana Jones and the Fate of Atlantis - Recreated (Windows)</a>
+        </p>
+        <!--<video class="proj-vid mythicon-sec-vid" controls>
+          <source src="../videos/mythicon-vid.mp4" type="videp/mp4">
+        </video>
+        <p class="proj-vid-desc mythicon-sec-desc">
+          This game started out as a Real Time Strategy game idea, but was turned into a point-and-click adventure as production went on.
+          The premise is basically that the knight (main character) has had his tribe taken away by the gods. So to get them all back, he
+          must first find all of the hidden relics and bring them back to the sacred circle. It was a fun game to make, and still needs some
+          bugs taken out. I have gained permission to continue development, and am doing so slowly.
+        </p>-->
       </div>
     </section>
   </div>
