--- a/pages/unity_projects.html
+++ b/pages/unity_projects.html
@@ -76,7 +76,7 @@
           <a href="https://drive.google.com/file/d/1PUeXNMUjiEhHuLLDlYOy6GwsQxQJJ0SZ/view?usp=sharing">Clean Your Room - Windows</a><br />
         </p>
         <video class="proj-vid indy-sec-vid" controls>
-          <source src="../videos/indy-video.mp4" type="videp/mp4">
+          <source src="../videos/indy-video.mp4" type="video/mp4">
         </video>
         <p class="proj-vid-desc indy-sec-desc">
           This is a recreation of a level from one of my favorite games of all times, Indiana Jones and the Fate of Atlantis.
