--- a/pages/cpp_projects.html
+++ b/pages/cpp_projects.html
@@ -61,10 +61,10 @@
           <source src="../videos/Space_Rogue2.mp4" type="video/mp4">
         </video>
         <p class="proj-vid-desc space-rouge2-desc">
-          This is an upgraded version of the above Space Rouge game. It used a
+          This is an upgraded version of the above Space Rouge game. It uses a
           very rudimentary graphics and sound libary. All game logic, player
-          controllers, collision, AI, etc. is programmed in pure C++. This project
-          took about 3 days to complete. Here is the link to its GitHub repository:
+          controllers, collision, AI, etc. is programmed in pure C++. The project
+          start to finish took about 3 days to complete. Here is the link to its GitHub repository:
           <a href="https://github.com/bhh32/OOP/tree/master/Assessment3">Space Rouge Vers. 2</a>
         </p>
       </div>
