Update illustrator wording

--- a/pages/illustrator.html
+++ b/pages/illustrator.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Bryan Hyland" />
   <meta name="keywords" content="Unity3D, games, video games, unity games" />
-  <title>Bryan's Portfolio - Unit3D</title>
+  <title>Bryan's Portfolio - Illustrator</title>
 
   <link rel="stylesheet" type="text/css" href="../css/newlayout.css" />
   <link rel="stylesheet" type="text/css" href="../css/newstandardstyle.css" />
@@ -46,9 +46,9 @@
       <div class="page-text-body">
         <img class="ill-pic comic-logos-pic" src="../images/Comicon_Logos.png" alt="Comicon_Logos" />
         <p class="ill-pic-desc comic-logos-pic-desc">
-          This is a collection of images I created in brainstorming for the below project. You can see below
-          I didn't use them in the final project, however, they turned out very well and they illustrate my
-          attention to detail and skill when using Adobe Illustrator. Click to see a larger version:
+          This is a collection of images I created in brainstorming for the below project. Although
+          none are used in the project; they represent my skill in using Adobe Illustrator. Click to 
+          see a larger version:
           <a href="../images/Comicon_Logos.png" target="_blank">Comicon Logos</a>
         </p>
         <div class="comic-pic-container">
@@ -58,23 +58,22 @@
         <p class="ill-pic-desc comic-pic-desc">
           These two pictures are a final project I did for a graphic design class.
           The left one is the front and back covers, and the right one is the interior.
-          I used the pen tool a lot in them, and they show
-          that I am able to layout a design. I understand the proportions of a piece and
-          am able to use the space wisely. Nothing in the project is premade. I did all of
-          the art myself in Adobe Illustrator. You can see them bigger using the following two links<br />
+          Nothing in the project is premade, and all of the art is done by me. I did 
+          use references, however to ensure proper proportion. Click the links for larger
+          versions:<br />
           - <a href="../images/Final_Project_Font_and_Back_Covers.jpg" target="_blank">Covers</a><br />
           - <a href="../images/Hyland_Final_Project_Interior.jpg" target="_blank">Interior</a>
         </p>
         <img class="ill-pic seeker-pic" src="../images/the-seeker.jpg" alt="the-seeker-picture" />
         <p class="ill-pic-desc seeker-pic-desc">
           This guy was just a fun detour of a day. I had an idea of a sleuth and wanted to get it down onto a medium. Since I'm not so
-          good with pen and paper, Illustrator was my go to. You can see him bigger here:
+          good with pen and paper, Illustrator was my go to. You can see a larger version here:
           <a href="../images/the-seeker.jpg" target="_blank">The Seeker</a>
         </p>
         <img class="ill-pic slappy-pappy-pic" src="../images/slapPapLogo.png" alt="slappy-pappy-logo" />
         <p class="ill-pic-desc slappy-pappy-desc">
-          Slappy Pappy is the realization of a joke from a classmate and my conversations while commuting. She, being an artist, hand
-          drew him, and I took that sketch and inked it in Illustrator. It has now become my not-so-official logo!
+          A classmate and I used to joke about a character named Slappy Pappy while commuting. She, being an artist, hand
+          sketched him. I used her sketch and inked it in Illustrator. It has now become my not-so-official logo!
         </p>
       </div>
     </section>
