Changed contact wording

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Bryan's Contact Info" />
     <meta name="author" content="Bryan Hyland" />
     <meta name="keywords" content="Unity3D, games, video games, unity games" />
-    <title> Bryan's Portfolio - Contact </title>
+    <title> Bryan Hyland - Contact </title>
 
     <link rel="stylesheet" type="text/css" href="../css/newlayout.css" />
     <link rel="stylesheet" type="text/css" href="../css/newstandardstyle.css" />
@@ -42,9 +42,9 @@
     <div class="content">
       <section class="contact page-text">
         <h3 class="contact-head">Contact Me</h3>
-        <p class="conatact-body">Feel free to contact me and tell me what you think. Even if that includes constructive
-          criticism to make myself and my projects better! Thank you for visiting, and ensure you check back often to see what
-          exciting new projects I'm working on!</p>
+        <p class="conatact-body">Feel free to contact me and tell me what you think. I welcome constructive criticism. 
+          Thank you for visiting, and ensure you check back often to see what
+          projects I've updated as well as new ones I may have come up with!</p>
         <p class="contact-links">
           <a class="contact-link contact-resume" href="https://resume.creddle.io/resume/kh4jwsbndq">Bryan's Resume</a><br />
           <a class="contact-link contact-github" href="https://github.com/bhh32/">Bryan's GitHub Repositories</a><br />
