Changed tab title

--- a/pages/cpp_projects.html
+++ b/pages/cpp_projects.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="Game Programming, video game, programmer, software developer" />
   <meta name="author" content="Bryan Hyland" />
 
-  <title>Bryan's Portfolio - C++</title>
+  <title>Bryan Hyland - C++</title>
 
   <link rel="stylesheet" type="text/css" href="../css/newlayout.css" />
   <link rel="stylesheet" type="text/css" href="../css/newstandardstyle.css" />
