Changed unity tab title

--- a/pages/unity_projects.html
+++ b/pages/unity_projects.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Bryan Hyland" />
   <meta name="keywords" content="Unity3D, games, video games, unity games" />
-  <title>Bryan's Portfolio - Unity3D</title>
+  <title>Bryan Hyland - Unity3D</title>
 
   <link rel="stylesheet" type="text/css" href="../css/newlayout.css" />
   <link rel="stylesheet" type="text/css" href="../css/newstandardstyle.css" />
