Changed unreal tab title

--- a/pages/unreal_projects.html
+++ b/pages/unreal_projects.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Bryan's Contact Info" />
   <meta name="author" content="Bryan Hyland" />
   <meta name="keywords" content="Unity3D, games, video games, unity games" />
-  <title>Bryan's Portfolio - Unreal Engine 4</title>
+  <title>Bryan Hyland - Unreal Engine 4</title>
 
   <link rel="stylesheet" type="text/css" href="../css/newlayout.css" />
   <link rel="stylesheet" type="text/css" href="../css/newstandardstyle.css" />
