Changed home tab title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Game Programming, video game, programmer, software developer" />
     <meta name="author" content="Bryan Hyland" />
 
-    <title>Bryan's Portfolio - Home</title>
+    <title>Bryan Hyland - Home</title>
 
     <link rel="stylesheet" type="text/css" href="./css/newlayout.css" />
     <link rel="stylesheet" type="text/css" href="./css/newstandardstyle.css" />
