Reworded Indy section

--- a/pages/unity_projects.html
+++ b/pages/unity_projects.html
@@ -81,8 +81,8 @@
           This is a recreation of a level from one of my favorite games of all time, Indiana Jones and the Fate of Atlantis.
           I got lucky and was able to recreate this part of the game as my Minor Project at the Academy of Interactive Entertainment.
           One of my additions was to be able to have point and click controls like the original game, or you can choose to use the keyboard
-          for movement. This is done using a singleton pattern for a toggle that is clicked in the main menu. I created about 90% of the code
-          for this game.
+          for movement. This is done using a singleton pattern for a toggle that is clicked in the main menu. I created player controllers, dialog
+          system, inventory system, animation controller (not the animations), UI, and audio controller.
           Follow the link to play the game <a href="https://drive.google.com/file/d/1xIiwSermtKz-RtkDzpY5cubKMelAP3Wh/view?usp=sharing">Indiana Jones and the Fate of Atlantis - Recreated (Windows)</a>
         </p>
         <!--<video class="proj-vid mythicon-sec-vid" controls>
