Added JS to detect Internet Explorer and popup a message stating it's not supported

--- a/index.html
+++ b/index.html
@@ -49,5 +49,6 @@
         <a class="footer-contact-item email" href="mailto:bryan.hyland32@gmail.com">Email</a>
       </div>
     </footer>
+    <script type="text/javascript" src="./js/iedetect.js"></script>
   </body>
 </html>
