--- a/pages/illustrator.html
+++ b/pages/illustrator.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Bryan Hyland" />
   <meta name="keywords" content="Unity3D, games, video games, unity games" />
-  <title>Bryan's Portfolio - Illustrator</title>
+  <title>Bryan Hyland - Illustrator</title>
 
   <link rel="stylesheet" type="text/css" href="../css/newlayout.css" />
   <link rel="stylesheet" type="text/css" href="../css/newstandardstyle.css" />
@@ -47,7 +47,7 @@
         <img class="ill-pic comic-logos-pic" src="../images/Comicon_Logos.png" alt="Comicon_Logos" />
         <p class="ill-pic-desc comic-logos-pic-desc">
           This is a collection of images I created in brainstorming for the below project. Although
-          none are used in the project; they represent my skill in using Adobe Illustrator. Click to 
+          none are used in the project; they represent my skill in using Adobe Illustrator. Click to
           see a larger version:
           <a href="../images/Comicon_Logos.png" target="_blank">Comicon Logos</a>
         </p>
@@ -58,7 +58,7 @@
         <p class="ill-pic-desc comic-pic-desc">
           These two pictures are a final project I did for a graphic design class.
           The left one is the front and back covers, and the right one is the interior.
-          Nothing in the project is premade, and all of the art is done by me. I did 
+          Nothing in the project is premade, and all of the art is done by me. I did
           use references, however to ensure proper proportion. Click the links for larger
           versions:<br />
           - <a href="../images/Final_Project_Font_and_Back_Covers.jpg" target="_blank">Covers</a><br />
