Added blue bird prototype to Unreal page

--- a/pages/unity_projects.html
+++ b/pages/unity_projects.html
@@ -43,7 +43,8 @@
     <section class="page-text">
       <h3 class="page-text-head">Unity3D Projects</h3>
       <div class="page-text-body">
-        <video class="proj-vid thirty-sec-vid" controls>          <source src="../videos/30_sec_vid.mp4" type="video/mp4">
+        <video class="proj-vid thirty-sec-vid" controls>          
+          <source src="../videos/30_sec_vid.mp4" type="video/mp4">
         </video>
         <p class="proj-vid-desc thirty-sec-desc">
           This was a game for a one day game jam that another programmer and I participated in.
