--- a/pages/unreal_projects.html
+++ b/pages/unreal_projects.html
@@ -44,6 +44,13 @@
     <section class="page-text">
       <h3 class="page-text-head">Unreal Engine 4 Projects</h3>
       <div class="page-text-body">
+        <video class="blue-bird-vid unreal-imgs" controls>
+          <source src="../videos/blue_bird.mp4" type="video/mp4">
+        </video>
+        <p class="unreal-desc blue-bird-desc">
+          The above video is a prototype I did for an idea of a horror/survival game
+          some classmates and I had an idea for. They dropped out soon after the prototype was made, but the work is still there. I used Unreal Engine 4.16, and all of the programming for the camera and player controller is in C++. I used Unreal's Blueprint system for the audio, trigger points (where birds make sounds), and the day/night system.
+        </p>
         <img class="assignment-mash-img unreal-imgs" src="../images/assignment_mash.png" alt="assignment-mash">
         <p class="unreal-desc assignment-mash-desc">
           This assignment was one I did over a course of a quarter while attending
