Fixed Typo in Unreal Page

--- a/pages/unreal_projects.html
+++ b/pages/unreal_projects.html
@@ -56,7 +56,7 @@
         </video>
         <p class="unreal-desc torch-desc">
           Torch is a game jam game. Although it's unfinished, since time ran out, the premise of it was that you are a mage in training. This is your initiation mission, and there are three puzzles that you must figure out to pass.<br />
-          - Trial 1: Find the ancient relic of the mages using your trained magic sight to figure out the order of the ancient symbols, and place their stones on the proper pedastal.<br />
+          - Trial 1: Find the ancient relic of the mages using your trained magic sight to figure out the order of the ancient symbols, and place their stones on the proper pedestal.<br />
           - Trial 2: Decifer the ancient language of the elders to find the path to the final chamber door.<br />
           - Trial 3: Follow the path of the elders who first learned of magic to understand why the mages are who they are to this day.
         </p>
