Changed blue bird description wording.

--- a/pages/unreal_projects.html
+++ b/pages/unreal_projects.html
@@ -48,7 +48,7 @@
           <source src="../videos/blue_bird.mp4" type="video/mp4">
         </video>
         <p class="unreal-desc blue-bird-desc">
-          The above video is a prototype I did for an idea of a horror/survival game
+          This video is a prototype I did for an idea of a horror/survival game
           some classmates and I had an idea for. They dropped out soon after the prototype was made, but the work is still there. I used Unreal Engine 4.16, and all of the programming for the camera and player controller is in C++. I used Unreal's Blueprint system for the audio, trigger points (where birds make sounds), and the day/night system.
         </p>
         <video class="torch-vid unreal-imgs" controls>
