Fixed run on in intro

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <h3 class="intro-head">Introduction</h3>
         <p class="intro-body">Hello, my name is Bryan. Welcome to my page! I am a programmer who does many
         different types of programming. Visit each page to see what I've accomplished in each given framework.
-        Also, don't be alarmed, I did say I'm a programmer, but I also do a tiny bit of art; mainly with Adobe
-        Illustrator.</p>
+        Also, don't be alarmed, I do a tiny bit of art on top of my programming. It's mainly with Adobe
+        Illustrator. A little programmer art never hurt anyone.</p>
           <p class=intro-body>Thank you, again, for visiting! My resumé is linked on the contact page as well as in the footer.
       </section>
     </div>
