--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
   <body>
     <header>
-      <h1 class="headertext">Bryan Hyland<br />Developer for the Masses</h1>
-      <img class="header-img" src="./images/slapPapLogo.png" alt="slappy-pappy-logo" />
+      <h1 class="headertext"><p class="header-name">Bryan Hyland</p><p class="header-tag">Developer for the Masses</p></h1>
+      <a href="./index.html"><img class="header-img" src="../images/slapPapLogo.png" alt="slappy-pappy-logo" /></a>
     </header>
     <!-- top navigation bar -->
     <nav class="headNav">
@@ -33,8 +33,8 @@
     <div class="content">
     <!-- Introduction section -->
       <section class="intro page-text">
-        <h3 class="intro-head">Introduction</h3>
-        <p class="intro-body">Hello, my name is Bryan. Welcome to my page! I am a programmer who does many
+        <h3 class="intro-head page-text-head">Introduction</h3>
+        <p class="intro-body page-text-body">Hello, my name is Bryan. Welcome to my page! I am a programmer who does many
         different types of programming. Visit each page to see what I've accomplished in each given framework.
         Also, don't be alarmed, I do a tiny bit of art on top of my programming. It's mainly with Adobe
         Illustrator. A little programmer art never hurt anyone.</p>
