--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,7 +15,10 @@
 
   <body>
     <header>
-      <h1 class="headertext">Bryan Hyland<br />Developer for the Masses</h1>
+      <h1 class="headertext">
+        <p class="header-name">Bryan Hyland</p>
+        <p class="header-tag">Developer for the Masses</p>
+      </h1>
       <a href="../index.html"><img class="header-img" src="../images/slapPapLogo.png" alt="slappy-pappy-logo" /></a>
     </header>
     <!-- top navigation bar -->
@@ -41,8 +44,8 @@
     </nav>
     <div class="content">
       <section class="contact page-text">
-        <h3 class="contact-head">Contact Me</h3>
-        <p class="conatact-body">Feel free to contact me and tell me what you think. I welcome constructive criticism. 
+        <h3 class="contact-head page-text-head">Contact Me</h3>
+        <p class="conatact-body page-text-body">Feel free to contact me and tell me what you think. I welcome constructive criticism. 
           Thank you for visiting, and ensure you check back often to see what
           projects I've updated as well as new ones I may have come up with!</p>
         <p class="contact-links">
