--- a/pages/cpp_projects.html
+++ b/pages/cpp_projects.html
@@ -17,8 +17,11 @@
 
 <body>
   <header>
-    <h1 class="headertext">Bryan Hyland<br />Developer for the Masses</h1>
-    <img class="header-img" src="../images/slapPapLogo.png" alt="slappy-pappy-logo" />
+    <h1 class="headertext">
+      <p class="header-name">Bryan Hyland</p>
+      <p class="header-tag">Developer for the Masses</p>
+    </h1>
+    <a href="../index.html"><img class="header-img" src="../images/slapPapLogo.png" alt="slappy-pappy-logo" /></a>
   </header>
   <!-- top navigation bar -->
   <nav class="headNav">
