--- a/pages/unity_projects.html
+++ b/pages/unity_projects.html
@@ -15,7 +15,10 @@
 
 <body>
   <header>
-    <h1 class="headertext">Bryan Hyland<br />Developer for the Masses</h1>
+    <h1 class="headertext">
+      <p class="header-name">Bryan Hyland</p>
+      <p class="header-tag">Developer for the Masses</p>
+    </h1>
     <a href="../index.html"><img class="header-img" src="../images/slapPapLogo.png" alt="slappy-pappy-logo" /></a>
   </header>
   <!-- top navigation bar -->
