--- a/pages/android_projects.html
+++ b/pages/android_projects.html
@@ -7,11 +7,11 @@
   <meta name="description" content="Bryan's Contact Info" />
   <meta name="author" content="Bryan Hyland" />
   <meta name="keywords" content="Unity3D, games, video games, unity games" />
-  <title>Bryan's Portfolio - Java</title>
+  <title>Bryan's Portfolio - android</title>
 
   <link rel="stylesheet" type="text/css" href="../css/newlayout.css" />
   <link rel="stylesheet" type="text/css" href="../css/newstandardstyle.css" />
-  <link rel="stylesheet" type="text/css" href="../css/java.css" />
+  <link rel="stylesheet" type="text/css" href="../css/android.css" />
 </head>
 
 <body>
@@ -30,11 +30,11 @@
     <a class="navlink cpp" href="../pages/cpp_projects.html">
       <p>C++ Projects</p>
     </a>
-    <a class="navlink java active-navlink" href="../pages/java_projects.html">
-      <p>Java</p>
+    <a class="navlink android active-navlink" href="../pages/android_projects.html">
+      <p>Android</p>
     </a>
-    <a class="navlink cs" href="../pages/csharp_projects.html">
-      <p>C# Projects</p>
+    <!--<a class="navlink cs" href="../pages/csharp_projects.html">
+      <p>C# Projects</p>-->
     </a>
     <a class="navlink unreal" href="../pages/unreal_projects.html">
       <p>Unreal Engine 4</p>
@@ -49,9 +49,19 @@
   </nav>
   <div class="content">
     <section class="page-text">
-      <h3 class="page-text-head">Java Projects</h3>
+      <h3 class="page-text-head">Android</h3>
       <div class="page-text-body">
-        <h1>Comming Soon! Please check back I have quite a few exciting Java projects to share with you!</h1>
+        <video class="proj-vid whoPays-vid" controls>
+          <source src="../videos/who_pays.mp4" type="video/mp4">
+        </video>
+        <p class="proj-vid-desc whoPays-desc">
+          This is an app I came up with to solve the dispute between my fiancee and I.
+          She would sneakily pay, or I would. So, to solve the problem I made this app which
+          randomly chooses a name using a random number generator. I have plans to upgrade it to
+          where you can choose how many people are in your group to generate that many name fields.
+          The following is a link to download and try it: 
+          <a href="#" target="_blank">Who Pays?</a>
+        </p>
       </div>
     </section>
   </div>
