--- a/pages/cpp_projects.html
+++ b/pages/cpp_projects.html
@@ -27,8 +27,8 @@
   <nav class="headNav">
     <a class="navlink index" href="../index.html"><p>Home</p></a>
     <a class="navlink cpp active-navlink" href="../pages/cpp_projects.html"><p>C++ Projects</p></a>
-    <!--<a class="navlink java" href="./pages/java_projects.html"><p>Java</p></a>-->
-    <!--<a class="navlink cs" href="./pages/csharp_projects.html"><p>C# Projects</p></a>-->
+    <a class="navlink android" href="../pages/android_projects.html"><p>Android</p></a>
+    <!--<a class="navlink cs" href="../pages/csharp_projects.html"><p>C# Projects</p></a>-->
     <a class="navlink unreal" href="../pages/unreal_projects.html"><p>Unreal Engine 4</p></a>
     <a class="navlink unity" href="../pages/unity_projects.html"><p>Unity</p></a>
     <a class="navlink illustrator" href="../pages/illustrator.html"><p>Illustrator</p></a>
