--- a/pages/illustrator.html
+++ b/pages/illustrator.html
@@ -30,8 +30,8 @@
     <a class="navlink cpp" href="../pages/cpp_projects.html">
       <p>C++ Projects</p>
     </a>
-    <!--<a class="navlink java" href="./pages/java_projects.html"><p>Java</p></a>-->
-    <!--<a class="navlink cs" href="./pages/csharp_projects.html"><p>C# Projects</p></a>-->
+    <a class="navlink android" href="../pages/android_projects.html"><p>Android</p></a>
+    <!--<a class="navlink cs" href="../pages/csharp_projects.html"><p>C# Projects</p></a>-->
     <a class="navlink unreal" href="../pages/unreal_projects.html">
       <p>Unreal Engine 4</p>
     </a>
