Added cosmic weight to android page

--- a/pages/android_projects.html
+++ b/pages/android_projects.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Bryan's Contact Info" />
   <meta name="author" content="Bryan Hyland" />
   <meta name="keywords" content="Unity3D, games, video games, unity games" />
-  <title>Bryan's Portfolio - android</title>
+  <title>Bryan's Portfolio - Android</title>
 
   <link rel="stylesheet" type="text/css" href="../css/newlayout.css" />
   <link rel="stylesheet" type="text/css" href="../css/newstandardstyle.css" />
@@ -61,6 +61,15 @@
           where you can choose how many people are in your group to generate that many name fields.
           The following is a link to download and try it: 
           <a href="#" target="_blank">Who Pays?</a>
+        </p>
+        <video class="proj-vid cosmic-vid" controls>
+          <source src="../videos/cosmic-weight.mp4" type="video/mp4">
+        </video>
+        <p class="proj-vid-desc cosmic-desc">
+          This is the first Android app I made with Unity. I was pretty pleased with myself, and have
+          recently done some updates to it to make sure it follows all proper coding standards for C#.
+          The idea of it is to type your (or a random) weight in pounds and calculate it for different
+          bodies in the Solar System.
         </p>
       </div>
     </section>
