--- a/pages/android_projects.html
+++ b/pages/android_projects.html
@@ -59,8 +59,9 @@
           She would sneakily pay, or I would. So, to solve the problem I made this app which
           randomly chooses a name using a random number generator. I have plans to upgrade it to
           where you can choose how many people are in your group to generate that many name fields.
-          The following is a link to download and try it: 
-          <a href="#" target="_blank">Who Pays?</a>
+          It's written in Java and I used Android Studio as the development environment.<br /><br />
+          If you'd like to download and try it, click the link: 
+          <a href="https://drive.google.com/file/d/1k5zUo_t-xxXF1ybTr8Zn-DhdAYJ-MCfR/view?usp=sharing" target="_blank">Who Pays?</a>
         </p>
         <video class="proj-vid cosmic-vid" controls>
           <source src="../videos/cosmic-weight.mp4" type="video/mp4">
