Added rust project page and cleaned up navigation on all pages

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <nav class="headNav">
       <a class="navlink index active-navlink" href="./index.html"><p>Home</p></a>
       <a class="navlink cpp" href="./pages/cpp_projects.html"><p>C++ Projects</p></a>
+      <a class="navlink rust" href="../pages/rust_projects.html"><p>Rust Projects</p></a>
       <a class="navlink android" href="./pages/android_projects.html"><p>Android</p></a>
       <!--<a class="navlink cs" href="./pages/csharp_projects.html"><p>C# Projects</p></a>-->
       <a class="navlink unreal" href="./pages/unreal_projects.html"><p>Unreal Engine 4</p></a>
