--- a/pages/cpp_projects.html
+++ b/pages/cpp_projects.html
@@ -27,6 +27,7 @@
   <nav class="headNav">
     <a class="navlink index" href="../index.html"><p>Home</p></a>
     <a class="navlink cpp active-navlink" href="../pages/cpp_projects.html"><p>C++ Projects</p></a>
+    <a class="navlink rust" href="../pages/rust_projects.html"><p>Rust Projects</p></a>
     <a class="navlink android" href="../pages/android_projects.html"><p>Android</p></a>
     <!--<a class="navlink cs" href="../pages/csharp_projects.html"><p>C# Projects</p></a>-->
     <a class="navlink unreal" href="../pages/unreal_projects.html"><p>Unreal Engine 4</p></a>
@@ -39,6 +40,13 @@
     <section class="page-text">
       <h3 class="page-text-head">C++ Projects</h3>
       <div class="page-text-body">
+        <video class="proj-vid uBlue-TUI" controls>
+          <source src="../videos/uBlue_TUI.webm" type="video/webm">
+        </video>
+        <p class="proj-vid-desc uBlue-TUI-desc">
+          This is my graphical contribution to the <a href="https://ublue.it">uBlue project</a>. Any contribution to is is welcome.<br>
+          Repository: <a href="https://github.com/bhh32/ublue-rebase-gui">uBlue TUI</a>
+        </p>
         <video class="proj-vid mario-vid" controls>
           <source src="../videos/mario_platformer.mp4" type="video/mp4">
         </video>
