--- a/pages/unreal_projects.html
+++ b/pages/unreal_projects.html
@@ -24,24 +24,15 @@
   </header>
   <!-- top navigation bar -->
   <nav class="headNav">
-    <a class="navlink index" href="../index.html">
-      <p>Home</p>
-    </a>
-    <a class="navlink cpp" href="../pages/cpp_projects.html">
-      <p>C++ Projects</p>
-    </a>
+    <a class="navlink index" href="../index.html"><p>Home</p></a>
+    <a class="navlink cpp" href="../pages/cpp_projects.html"><p>C++ Projects</p></a>
+    <a class="navlink rust" href="../pages/rust_projects.html"><p>Rust Projects</p></a>
     <a class="navlink android" href="../pages/android_projects.html"><p>Android</p></a>
     <!--<a class="navlink cs" href="../pages/csharp_projects.html"><p>C# Projects</p></a>-->
-    <a class="navlink unreal active-navlink" href="../pages/unreal_projects.html">
-      <p>Unreal Engine 4</p>
-    </a>
-    <a class="navlink unity" href="../pages/unity_projects.html">
-      <p>Unity</p>
-    </a>
+    <a class="navlink unreal active-navlink" href="../pages/unreal_projects.html"><p>Unreal Engine 4</p></a>
+    <a class="navlink unity" href="../pages/unity_projects.html"><p>Unity</p></a>
     <a class="navlink illustrator" href="../pages/illustrator.html"><p>Illustrator</p></a>
-    <a class="navlink contact" href="../pages/contact.html">
-      <p>Contact Me</p>
-    </a>
+    <a class="navlink contact" href="../pages/contact.html"><p>Contact Me</p></a>
   </nav>
   <div class="content">
     <section class="page-text">
