--- a/pages/rust_projects.html
+++ b/pages/rust_projects.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Bryan's Contact Info" />
+  <meta name="description" content="Bryan Hyland's Portfolio" />
+  <meta name="keywords" content="Game Programming, video game, programmer, software developer" />
   <meta name="author" content="Bryan Hyland" />
-  <meta name="keywords" content="Unity3D, games, video games, unity games" />
-  <title>Bryan's Portfolio - Android</title>
+
+  <title>Bryan Hyland - Rust</title>
 
   <link rel="stylesheet" type="text/css" href="../css/newlayout.css" />
   <link rel="stylesheet" type="text/css" href="../css/newstandardstyle.css" />
-  <link rel="stylesheet" type="text/css" href="../css/android.css" />
 </head>
 
 <body>
@@ -26,8 +26,8 @@
   <nav class="headNav">
     <a class="navlink index" href="../index.html"><p>Home</p></a>
     <a class="navlink cpp" href="../pages/cpp_projects.html"><p>C++ Projects</p></a>
-    <a class="navlink rust" href="../pages/rust_projects.html"><p>Rust Projects</p></a>
-    <a class="navlink android active-navlink" href="../pages/android_projects.html"><p>Android</p></a>
+    <a class="navlink rust active-navlink" href="../pages/rust_projects.html"><p>Rust Projects</p></a>
+    <a class="navlink android" href="../pages/android_projects.html"><p>Android</p></a>
     <!--<a class="navlink cs" href="../pages/csharp_projects.html"><p>C# Projects</p></a>-->
     <a class="navlink unreal" href="../pages/unreal_projects.html"><p>Unreal Engine 4</p></a>
     <a class="navlink unity" href="../pages/unity_projects.html"><p>Unity</p></a>
@@ -35,29 +35,16 @@
     <a class="navlink contact" href="../pages/contact.html"><p>Contact Me</p></a>
   </nav>
   <div class="content">
+    <!-- Project section -->
     <section class="page-text">
-      <h3 class="page-text-head">Android</h3>
+      <h3 class="page-text-head">Rust Projects</h3>
       <div class="page-text-body">
-        <video class="proj-vid whoPays-vid" controls>
-          <source src="../videos/who_pays.mp4" type="video/mp4">
+        <video class="proj-vid uBlue-TUI" controls>
+          <source src="../videos/uBlue-it_cli.webm" type="video/webm">
         </video>
-        <p class="proj-vid-desc whoPays-desc">
-          This is an app I came up with to solve the dispute between my fiancee and I.
-          She would sneakily pay, or I would. So, to solve the problem I made this app which
-          randomly chooses a name using a random number generator. I have plans to upgrade it to
-          where you can choose how many people are in your group to generate that many name fields.
-          It's written in Java and I used Android Studio as the development environment.<br /><br />
-          If you'd like to download and try it, click the link: 
-          <a href="https://drive.google.com/file/d/1k5zUo_t-xxXF1ybTr8Zn-DhdAYJ-MCfR/view?usp=sharing" target="_blank">Who Pays?</a>
-        </p>
-        <video class="proj-vid cosmic-vid" controls>
-          <source src="../videos/cosmic-weight.mp4" type="video/mp4">
-        </video>
-        <p class="proj-vid-desc cosmic-desc">
-          This is the first Android app I made with Unity. I was pretty pleased with myself, and have
-          recently done some updates to it to make sure it follows all proper coding standards for C#.
-          The idea of it is to type your (or a random) weight in pounds and calculate it for different
-          bodies in the Solar System.
+        <p class="proj-vid-desc uBlue-TUI-desc">
+          This is my CLI contribution to the <a href="https://ublue.it">uBlue project</a>. Any contribution to is is welcome.<br>
+          Repository: <a href="https://github.com/bhh32/ublue-it-cli">uBlue CLI</a>
         </p>
       </div>
     </section>
@@ -71,4 +58,5 @@
     </div>
   </footer>
 </body>
+
 </html>
