Fixed index.html Rust page navigation and added Rust space shooter game

--- a/pages/rust_projects.html
+++ b/pages/rust_projects.html
@@ -57,6 +57,10 @@
       <a class="footer-contact-item email" href="mailto:bryan.hyland32@gmail.com">Email</a>
     </div>
   </footer>
-</body>
 
+  <script type="module">
+    import init from '../games/space-shooter-files/space-shooter.js';
+    init() 
+  </script>
+</body>
 </html>
